--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -25,6 +25,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 
 header {
   transition: top 0.3s ease-in-out;
@@ -39,6 +45,11 @@ header.fixed {
 
 html {
   scroll-behavior: smooth;
+}
+
+.fade-edge {
+  -webkit-mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 0) 90%);
+  mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 0) 90%);
 }
 
 
